--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
     header {
       background: var(--accent);
       color: white;
-      /* Significantly increased padding to make space for absolute elements */
       padding: 20px 120px; /* Top/bottom 20px, Left/Right 120px to make room */
       position: relative; /* Crucial for absolute positioning of children */
       text-align: center; /* Center the text content */
@@ -41,20 +40,42 @@
       margin: 5px 0 0;
       font-size: 0.95em;
     }
-    header .team-logo {
-      position: absolute; /* Position relative to the header */
-      top: 50%; /* Align vertically in the middle */
-      right: 20px; /* 20px from the right edge */
-      transform: translateY(-50%); /* Adjust for vertical centering */
-      width: 80px;
-      height: 25px;
-      object-fit: contain; /* Use 'contain' to ensure the whole logo is visible */
-      border-radius: 2%;
-      border: .5px solid white;
-      /* FIX: Remove white background from logo */
-      background: none; 
-      padding: 0; /* Ensure no extra padding adds background */
+    .team-logo {
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      transform: translateY(-50%);
+      
+      /* Styles for the "HexaTech Minds" logo */
+      width: 120px; /* Adjusted width for the text */
+      height: 45px; /* Adjusted height */
+      background-color: #1d5c8e; /* Blue background from your logo image */
+      border-radius: 50% / 50%; /* Creates the oval shape */
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* A clear sans-serif font */
+      text-shadow: 1px 1px 2px rgba(0,0,0,0.3); /* Slight shadow for depth */
+      padding: 5px 0; /* Add some vertical padding inside the oval */
+      box-sizing: border-box; /* Include padding in width/height */
+      text-decoration: none; /* In case it's wrapped in an anchor */
+      border: .5px solid white; /* Keep the white border */
     }
+    .team-logo span {
+      display: block; /* Make each line a block */
+      line-height: 1; /* Adjust line height for closer text */
+    }
+    .team-logo .main-text {
+      font-size: 1.2em; /* Larger for "HexaTech" */
+      font-weight: bold;
+    }
+    .team-logo .sub-text {
+      font-size: 0.8em; /* Smaller for "Minds" */
+      font-weight: normal;
+    }
+
     .theme-toggle {
       position: absolute; /* Position relative to the header */
       top: 50%; /* Align vertically in the middle */
@@ -138,7 +159,10 @@
     <h1>Research & References</h1>
     <p>Project: EduScheduler | SIH Problem ID: 25028</p>
     
-    <img src="https://assets-edited.replit.com/uploads/1690022244243_d815e100-344c-411a-a82f-287968a3068e.png" alt="Team Logo" class="team-logo">
+    <div class="team-logo">
+      <span class="main-text">HexaTech</span>
+      <span class="sub-text">Minds</span>
+    </div>
   </header>
 
   <div class="container">
